todo alignment corrected

--- a/src/app/MyComponents/todo-item/todo-item.component.css
+++ b/src/app/MyComponents/todo-item/todo-item.component.css
@@ -39,9 +39,8 @@ body {
   color: #7a9e9f;
 }
 
-.card .category,
-.card .label {
-  font-size: 14px;
+.card .category {
+  font-size: 18px;
   margin-bottom: 0px;
 }
 
@@ -74,7 +73,7 @@ h6,
 }
 
 .card .description {
-  font-size: 16px;
+  font-size: 18px;
   color: #66615b;
 }
 
