--- a/src/app/MyComponents/todos/todos.component.css
+++ b/src/app/MyComponents/todos/todos.component.css
@@ -27,3 +27,7 @@
   margin-left: 2px;
   font-size: 15px;
 }
+
+.todos-wrapper {
+  justify-content: space-evenly;
+}
